overflow 0.5 fixed

--- a/CSS/phonestyle.css
+++ b/CSS/phonestyle.css
@@ -179,12 +179,12 @@ article#frioul{
 }
 /*footer*/
 footer{
-    width: 90%;
+    width: 93%;
     display: flex;
     flex-direction: column;
 }
 footer div{
-    width: 100%;
+    width: 93%;
 }
 footer li{
     padding: 5px 0;
